2016-03-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): Set the syntax and regex pointers
	just once, in a single place.  And unnest two 'if's.
	* src/rcfile.c (parse_one_include, parse_includes): New names for
	these functions, to be more distinguishable.
	* src/rcfile.c (parse_colors): Reduce the indentation.
	* src/rcfile.c (parse_colors): Rename a variable.

2016-03-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser): Fix compilation when configured with
	--enable-tiny plus --enable-browser.
	* src/rcfile.c: Tweak some comments and reshuffle some lines.
	* src/rcfile.c (color_to_short): Elide a variable.
	* src/rcfile.c (grab_and_store): First check that there is an
	open syntax before checking that it is named "default".
	* src/rcfile.c (parse_rcfile): Fix compilation when configured with
	--enable-tiny plus --enable-nanorc.

2016-03-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (grab_and_store): Do not accept 'header' and 'magic'
	commands for the default syntax.  This fixes Savannah bug #47323.
	* src/rcfile.c (pick_up_name): Fold the parsing of a linter and
	formatter command into a single routine.
	* src/rcfile.c (parse_header_exp, parse_magic_exp, grab_and_store):
	Elide the first two functions, and reshuffle parameters in the last.
	* src/rcfile.c (parse_syntax, parse_rcfile), src/color.c
	(color_update): Turn the linked list of syntaxes upside-down, so that
	the last-defined one comes first, so that searching can stop at the
	first match instead of always having to run through the entire list.
	* src/rcfile.c: Rename a variable to better fit its new role.

2016-03-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_syntax): Produce an adequate error message
	when the syntax name is unquoted.  This fixes Savannah bug #47324.
	* src/rcfile.c (parse_syntax): Use the grab_and_store() function
	also for gathering up extension regexes.
